--- a/app/src/main/res/layout/fragment_personalize.xml
+++ b/app/src/main/res/layout/fragment_personalize.xml
@@ -155,7 +155,49 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/counter_feedback"
+                    android:text="@string/sound_feedback"
+                    android:fontFamily="@font/special_gothic_medium"
+                    android:textColor="@color/dark_grey"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/turn_this_on_to_get_sound_feedback_on_each_push_up_counts"
+                    android:fontFamily="@font/special_gothic_regular"
+                    android:textColor="@color/grey"
+                    android:textSize="11sp"/>
+
+            </LinearLayout>
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/soundFeedbackSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:thumbTint="@color/dark_grey"
+                android:layout_gravity="top"
+                app:trackDecorationTint="@color/dark_grey"
+                app:trackTint="@color/white"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="24dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginEnd="24dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/vibration_feedback"
                     android:fontFamily="@font/special_gothic_medium"
                     android:textColor="@color/dark_grey"
                     android:textSize="16sp"/>
@@ -171,7 +213,7 @@
             </LinearLayout>
 
             <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/counterFeedbackSwitch"
+                android:id="@+id/vibrationFeedbackSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:thumbTint="@color/dark_grey"
