--- a/app/src/main/res/layout/fragment_personalize.xml
+++ b/app/src/main/res/layout/fragment_personalize.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:animateLayoutChanges="true"
         android:padding="24dp">
 
         <androidx.cardview.widget.CardView
@@ -438,7 +437,7 @@
             android:id="@+id/resetSettingsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reset to defaults"
+            android:text="@string/reset_to_defaults"
             android:layout_marginVertical="32dp"
             android:fontFamily="@font/special_gothic_semiexpanded_regular"
             android:textColor="@color/primary"
