Refactor: Improve IDs and add functionality to Settings screen
This commit refactors the Settings screen layout to use more descriptive IDs and adds IDs to several `LinearLayout` containers to enable click handling.

Key changes in `fragment_settings.xml`:

-   **Descriptive IDs**:
    -   The `ImageView` for rating the app has been renamed from `imageView` to `rateUs`.
    -   The `ImageView` for sharing the app has been renamed from `imageView2` to `shareApp`.

-   **Clickable Containers**:
    -   Added `android:id` attributes to the `LinearLayout`s for "Report an Issue", "Contact Us", "Privacy Policy", and "Terms and Conditions" to make them individually accessible and clickable.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -59,19 +59,19 @@
             </androidx.cardview.widget.CardView>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/rateUs"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginEnd="8dp"
                 android:contentDescription="@string/rate_us"
                 android:src="@drawable/star"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintEnd_toStartOf="@+id/shareApp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/grey" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/shareApp"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:contentDescription="@string/share_app"
@@ -326,6 +326,7 @@
             android:textSize="16sp" />
 
         <LinearLayout
+            android:id="@+id/reportAnIssue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp">
@@ -356,6 +357,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/contactUs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp">
@@ -386,6 +388,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/privacyPolicy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp">
@@ -416,6 +419,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/termsAndConditions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp">
