--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.settings.AccountFragment">
+    tools:context=".ui.settings.general.AccountFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
