--- a/app/src/main/res/layout/fragment_personalize.xml
+++ b/app/src/main/res/layout/fragment_personalize.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.settings.PersonalizeFragment">
+    tools:context=".ui.settings.general.PersonalizeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
