--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -91,22 +91,22 @@
 
     <fragment
         android:id="@+id/personalizeFragment"
-        android:name="com.subhajitrajak.durare.ui.settings.PersonalizeFragment"
+        android:name="com.subhajitrajak.durare.ui.settings.general.PersonalizeFragment"
         android:label="Personalize"
         tools:layout="@layout/fragment_personalize" />
     <fragment
         android:id="@+id/notificationsFragment"
-        android:name="com.subhajitrajak.durare.ui.settings.NotificationsFragment"
+        android:name="com.subhajitrajak.durare.ui.settings.general.NotificationsFragment"
         android:label="fragment_notifications"
         tools:layout="@layout/fragment_notifications" />
     <fragment
         android:id="@+id/appearanceFragment"
-        android:name="com.subhajitrajak.durare.ui.settings.AppearanceFragment"
+        android:name="com.subhajitrajak.durare.ui.settings.general.AppearanceFragment"
         android:label="fragment_appearance"
         tools:layout="@layout/fragment_appearance" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.subhajitrajak.durare.ui.settings.AccountFragment"
+        android:name="com.subhajitrajak.durare.ui.settings.general.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
     <fragment
